# peggle-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-haggle-mod.yml  bump-tag.yml
configs/: dqn_discrete.yaml  ppo_continuous.yaml  ppo_discrete.yaml  sac_continuous.yaml  single_level.yaml  td3_continuous.yaml
haggle_mod/: premake5.lua
haggle_mod/src/: main.cpp  stdafx.hpp
peggle_rl/: __init__.py
peggle_rl/agents/: __init__.py  agents.py
peggle_rl/levels/: __init__.py  catalog.py  parser.py
peggle_rl/og/: __init__.py  env.py  pipe_client.py
peggle_rl/sim/: __init__.py  engine.py  env.py  physics.py  renderer.py
peggle_rl/utils/: __init__.py
scripts/: eval.py  play.py  train.py
tests/: smoke_test.py
